--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="https://fonts.google.com/specimen/Lexend+Deca" />
-  <link rel="stylesheet" href="https://fonts.google.com/specimen/Big+Shoulders+Display" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="stylesheet" href="styles.css" />
 
   <title>Frontend Mentor | 3-column preview card component</title>
